--- a/conjur-oss/Chart.yaml
+++ b/conjur-oss/Chart.yaml
@@ -1,6 +1,15 @@
 apiVersion: v1
-appVersion: "1.0"
-description: A Helm chart for CyberArk Conjur
 name: conjur-oss
-version: 1.0.0
+version: 0.1.0
+description: A Helm chart for CyberArk Conjur
 icon: https://xebialabs-clients-iglusjax.stackpathdns.com/assets/files/logos/CyberArkConjurLogoWhiteBlue.png
+keywords:
+  - security
+  - 'secrets management'
+home: https://www.conjur.org
+sources:
+  - https://github.com/cyberark/conjur-oss-helm-chart
+  - https://github.com/cyberark/conjur
+maintainers:
+  - name: Dustin Collins
+    email: dustin.collins@cyberark.com
