--- a/conjur-oss/templates/postgres.yaml
+++ b/conjur-oss/templates/postgres.yaml
@@ -5,7 +5,7 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-postgres
   labels: &AppPostgresLabels
-    app: {{ template "conjur-oss.name" . }}
+    app: {{ template "conjur-oss.name" . }}-postgres
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
@@ -19,7 +19,7 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-postgres
   labels: &AppPostgresLabels
-    app: {{ template "conjur-oss.name" . }}
+    app: {{ template "conjur-oss.name" . }}-postgres
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
