--- a/conjur-oss/templates/service.yaml
+++ b/conjur-oss/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "conjur-oss.fullname" . }}
-  labels:
+  labels: &AppConjurLabels
     app: {{ template "conjur-oss.name" . }}
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
@@ -14,6 +14,4 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
-  selector:
-    app: {{ template "conjur-oss.name" . }}
-    release: {{ .Release.Name }}
+  selector: *AppConjurLabels
