--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -33,8 +33,8 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   path: /
   hosts:
-    - chart-example.local
-  tls: []
+    - conjur-oss.local
+  # tls: []
   #  - secretName: chart-example-tls
   #    hosts:
   #      - chart-example.local
