external-dns is now working, need to parametrize

--- a/conjur-oss/templates/service.yaml
+++ b/conjur-oss/templates/service.yaml
@@ -7,6 +7,10 @@ metadata:
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+{{- with .Values.ingress.annotations }}
+  annotations:
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
   type: {{ .Values.service.type }}
   ports:
