--- a/conjur-oss/templates/secrets.yaml
+++ b/conjur-oss/templates/secrets.yaml
@@ -10,7 +10,7 @@ metadata:
     heritage: {{ .Release.Service }}
 type: Opaque
 data:
-  key: "{{ required "conjur dataKey must be provided!" .Values.dataKey | b64enc }}"
+  key: "{{ required "'dataKey' has no value, it must be provided!" .Values.dataKey | b64enc }}"
 ---
 apiVersion: v1
 kind: Secret
