--- a/conjur-oss/templates/ingress.yaml
+++ b/conjur-oss/templates/ingress.yaml
@@ -1,6 +1,38 @@
 {{- if .Values.ingress.enabled -}}
 {{- $fullName := include "conjur-oss.fullname" . -}}
-{{- $ingressPath := .Values.ingress.path -}}
+{{- $hosts := .Values.ingress.hosts -}}
+{{- $letsencrypt := .Values.ingress.tls.letsencrypt -}}
+{{- if $letsencrypt.enabled -}}
+---
+apiVersion: certmanager.k8s.io/v1alpha1
+kind: Certificate
+metadata:
+  name: {{ $fullName }}-certificate
+  labels:
+    app: {{ template "conjur-oss.name" . }}
+    chart: {{ template "conjur-oss.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+spec:
+  secretName: {{ $fullName }}-certificate-secret
+  issuerRef:
+    name: {{ $letsencrypt.issuerRef.name | quote }}
+    kind: {{ $letsencrypt.issuerRef.kind | quote }}
+  commonName: {{ $hosts | first | quote }}
+  dnsNames:
+  {{- range $hosts }}
+    - {{ . }}
+  {{- end }}
+  acme:
+    config:
+    - dns01:
+        provider: {{ $letsencrypt.dns01.provider | quote }}
+      domains:
+      {{- range $hosts }}
+        - {{ . }}
+      {{- end }}
+{{- end }}
+---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
@@ -13,26 +45,17 @@ metadata:
 {{- with .Values.ingress.annotations }}
   annotations:
 {{ toYaml . | indent 4 }}
-{{- end }}
+{{ end -}}
 spec:
-{{- if .Values.ingress.tls }}
+  backend:
+    serviceName: {{ $fullName }}
+    servicePort: http
+{{- if $letsencrypt.enabled }}
   tls:
-  {{- range .Values.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
+    - secretName: {{ $fullName }}-certificate-secret
+      hosts:
+      {{- range $hosts }}
         - {{ . }}
       {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
 {{- end }}
-  rules:
-  {{- range .Values.ingress.hosts }}
-    - host: {{ . }}
-      http:
-        paths:
-          - path: {{ $ingressPath }}
-            backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
-  {{- end }}
 {{- end }}
