--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -1,10 +1,8 @@
 # Default values for conjur-oss.
-# This is a YAML-formatted file.
-# Declare variables to be passed into your templates.
 
 # Conjur data key, 32 byte base-64 encoded string for data encryption.
-#dataKey: ""
-dataKey: "m4FgsblvDRfh2g0MvZPYb/O03d78x8JWtBxT+iyMnfM="
+# Generate one with `docker run --rm cyberark/conjur data-key generate`.
+dataKey: ""
 
 # PostgreSQL connection string. If left blank, a PostgreSQL deployment is created.
 databaseUrl: ""
@@ -23,23 +21,26 @@ postgres:
     pullPolicy: IfNotPresent
 
 service:
-  type: ClusterIP
+  type: ClusterIP  # Use NodePort when ingress is enabled, https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer#step_2_expose_your_deployment_as_a_service_internally
   port: 80
+  annotations: {}
 
 ingress:
   enabled: false
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: conjur-dustinc.itd-google.conjur.net.
+  annotations: {}
+    # external-dns.alpha.kubernetes.io/hostname: conjur.it.mydomain.com.
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - conjur-dustinc.itd-google.conjur.net
-    # - conjur-oss.local
-  # tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+  hosts: []
+    # - conjur.it.mydomain.com
+  tls:
+    letsencrypt:
+      enabled: false
+      # dns01:
+      #   provider: cloud-dns-staging  # from ClusterIssuer.spec.acme.dns01.providers.name
+      # issuerRef:
+      #   name: letsencrypt-staging  # from ClusterIssuer.metadata.name
+      #   kind: ClusterIssuer  # Issuer or ClusterIssuer, from cert-manager
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
