--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ test-unit:
   stage: test
   script:
     - helm lint --set dataKey=BLOB ./conjur-oss
-    - helm install --set dataKey=BLOB --debug --dry-run ./conjur-oss
+    # - helm install --set dataKey=BLOB --debug --dry-run ./conjur-oss
 
 package-tarballs:
   stage: package
