Don't try to save to local chart repo while packaging in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ package-tarballs:
   stage: package
   script:
     - mkdir -p output
-    - helm package -d ./output ./conjur-oss
+    - helm package --save=false --destination ./output ./conjur-oss
   artifacts:
     paths:
       - output/*.tgz
