--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,34 @@ image:
   name: lachlanevenson/k8s-helm:v2.9.1
   entrypoint: [""]
 
+services:
+  - docker:dind
+
+variables:
+  DOCKER_HOST: tcp://localhost:2375/  # https://docs.gitlab.com/ee/ci/docker/using_docker_build.html#use-docker-in-docker-executor
+  DOCKER_DRIVER: overlay2
+
 stages:
   - test
   - package
 
-test-unit:
+before_script:
+  - apk add --no-cache bash docker
+  - docker info
+
+test-lint:
   stage: test
   script:
     - helm lint --set dataKey=BLOB ./conjur-oss
-    # - helm install --set dataKey=BLOB --debug --dry-run ./conjur-oss
+  tags:
+    - kubernetes
+
+test-integration:
+  stage: test
+  script:
+    - ./test.sh
+  tags:
+    - kubernetes
 
 package-tarballs:
   stage: package
@@ -20,3 +39,5 @@ package-tarballs:
   artifacts:
     paths:
       - output/*.tgz
+  tags:
+    - kubernetes
