--- a/conjur-oss/templates/postgres.yaml
+++ b/conjur-oss/templates/postgres.yaml
@@ -9,6 +9,9 @@ metadata:
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+{{- with .Values.postgresLabels }}
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
   ports:
   - port: 5432
@@ -23,6 +26,9 @@ metadata:
     chart: {{ template "conjur-oss.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
+{{- with .Values.postgresLabels }}
+{{ toYaml . | indent 4 }}
+{{- end }}
 spec:
   replicas: 1
   template:
