--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -42,6 +42,9 @@ ingress:
       #   name: letsencrypt-staging  # from ClusterIssuer.metadata.name
       #   kind: ClusterIssuer  # Issuer or ClusterIssuer, from cert-manager
 
+conjurLabels: {}  # Additional labels to apply to all conjur resources
+postgresLabels: {}  # Additional labels to apply to all conjur resources
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
