--- a/conjur-oss/Chart.yaml
+++ b/conjur-oss/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: conjur-oss
-version: 0.2.1
+version: 0.2.2
 description: A Helm chart for CyberArk Conjur
 icon: https://xebialabs-clients-iglusjax.stackpathdns.com/assets/files/logos/CyberArkConjurLogoWhiteBlue.png
 keywords:
@@ -11,5 +11,5 @@ sources:
   - https://github.com/cyberark/conjur-oss-helm-chart
   - https://github.com/cyberark/conjur
 maintainers:
-  - name: Dustin Collins
-    email: dustin.collins@cyberark.com
+  - name: Conjur Maintainers
+    email: conj_maintainers@cyberark.com
