--- a/conjur-oss/templates/secrets.yaml
+++ b/conjur-oss/templates/secrets.yaml
@@ -2,6 +2,24 @@
 apiVersion: v1
 kind: Secret
 metadata:
+  name: {{ .Release.Name }}-conjur-authenticators
+  labels:
+    app: {{ template "conjur-oss.name" . }}
+    chart: {{ template "conjur-oss.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: service
+{{- with .Values.conjurLabels }}
+{{ toYaml . | indent 4 }}
+{{- end }}
+type: Opaque
+data:
+  key: "{{ .Values.authenticators | b64enc }}"
+---
+apiVersion: v1
+kind: Secret
+metadata:
   name: {{ .Release.Name }}-conjur-data-key
   labels:
     app: {{ template "conjur-oss.name" . }}
