--- a/conjur-oss/templates/service.yaml
+++ b/conjur-oss/templates/service.yaml
@@ -20,7 +20,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: http
+      targetPort: https
       protocol: TCP
-      name: http
+      name: https
   selector: *AppConjurLabels
