--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -26,13 +26,14 @@ deployment:
 
 service:
   type: ClusterIP  # Use NodePort when ingress is enabled, https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer#step_2_expose_your_deployment_as_a_service_internally
-  port: 80
+  port: 443
   annotations: {}
 
 ingress:
   enabled: false
   annotations: {}
     # external-dns.alpha.kubernetes.io/hostname: conjur.it.mydomain.com.
+    # kubernetes.io/ingress.allow-http: "false"
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts: []
