Add self signed certificate generation
NGINX will now be configured with a self signed certificate created
during pre-install.

--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -10,6 +10,11 @@ dataKey: ""
 # PostgreSQL connection string. If left blank, a PostgreSQL deployment is created.
 databaseUrl: ""
 
+ssl:
+  expiration: 365 # days
+  hostname: "conjur.myorg.com"
+  altnames: []
+
 image:
   repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
   tag: latest
