Added ability to use a CA cert in NGINX
We will need this to remove the popup the browser introduces when
connecting to Conjur.

--- a/conjur-oss/files/conjur.conf
+++ b/conjur-oss/files/conjur.conf
@@ -1,6 +1,9 @@
 server {
   ssl_certificate /opt/conjur/etc/ssl/cert/tls.crt;
   ssl_certificate_key /opt/conjur/etc/ssl/cert/tls.key;
+
+  ssl_client_certificate /opt/conjur/etc/ssl/ca/tls.crt;
+
   ssl_verify_client optional_no_ca;
 
   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
