--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -30,6 +30,11 @@ spec:
           secretName: {{ .Release.Name }}-conjur-ssl-cert
           # Permission == 0400. JSON spec doesn’t support octal notation.
           defaultMode: 256
+      - name: {{ .Release.Name }}-conjur-ssl-ca-cert-volume
+        secret:
+          secretName: {{ .Release.Name }}-conjur-ssl-ca-cert
+          # Permission == 0400. JSON spec doesn’t support octal notation.
+          defaultMode: 256
       - name: {{ .Release.Name }}-conjur-configmap-volume
         configMap:
           name: {{ .Release.Name }}-conjur-nginx-configmap
@@ -75,6 +80,9 @@ spec:
         volumeMounts:
         - name: {{ .Release.Name }}-conjur-ssl-cert-volume
           mountPath: /opt/conjur/etc/ssl/cert
+          readOnly: true
+        - name: {{ .Release.Name }}-conjur-ssl-ca-cert-volume
+          mountPath: /opt/conjur/etc/ssl/ca
           readOnly: true
         - name: {{ .Release.Name }}-conjur-configmap-volume
           mountPath: /etc/nginx
