Made ingress enabled by default
Since we have TLS termination, we can enable ingress by default

--- a/conjur-oss/templates/ingress.yaml
+++ b/conjur-oss/templates/ingress.yaml
@@ -59,7 +59,7 @@ metadata:
 spec:
   backend:
     serviceName: {{ $fullName }}
-    servicePort: http
+    servicePort: https
 {{- if $letsencrypt.enabled }}
   tls:
     - secretName: {{ $fullName }}-certificate-secret
