--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -30,19 +30,21 @@ deployment:
   annotations: {}
 
 service:
-  type: ClusterIP  # Use NodePort when ingress is enabled, https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer#step_2_expose_your_deployment_as_a_service_internally
+  type: NodePort
   port: 443
   annotations: {}
 
 ingress:
-  enabled: false
-  annotations: {}
-    # external-dns.alpha.kubernetes.io/hostname: conjur.it.mydomain.com.
-    # kubernetes.io/ingress.allow-http: "false"
-    # kubernetes.io/ingress.class: nginx
+  enabled: true
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: conjur.myorg.com.
+    ingress.kubernetes.io/ssl-passthrough: "true"
+    kubernetes.io/ingress.allow-http: "false"
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     # kubernetes.io/tls-acme: "true"
-  hosts: []
-    # - conjur.it.mydomain.com
+  hosts:
+    - conjur.myorg.com
   tls:
     letsencrypt:
       enabled: false
