Removed out outdated code for certificate generation
Old script-based certificate generation is no longer used so we don't
need any of the support files that came with it.

--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -12,8 +12,9 @@ databaseUrl: ""
 
 ssl:
   expiration: 365 # days
-  hostname: "conjur.myorg.com"
-  altNames: []
+  hostname: "192.168.99.100"
+  altNames:
+    - conjur.myorg.com
 
 image:
   repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
