Made NGINX container version be customizable
Like postgres, we want to be able to configure which NGINX versions we
want to use in our chart.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -50,8 +50,8 @@ spec:
 
       containers:
       - name: {{ .Release.Name }}-nginx
-        image: "nginx:1.15"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+        image: "{{ .Values.nginx.image.repository }}:{{ .Values.nginx.image.tag }}"
+        imagePullPolicy: {{ .Values.nginx.image.pullPolicy }}
         ports:
         - containerPort: 9443
           name: https
