Add resources to support `authn-k8s`
Grants the Conjur deployment the necessary roles to authenticate
pods, writes CONJUR_ACCOUNT environment variable to Conjur
container.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels: *AppConjurLabels
     spec:
+      serviceAccountName: {{ .Release.Name }}-conjur-oss
       volumes:
       - name: {{ .Release.Name }}-conjur-ssl-cert-volume
         secret:
@@ -130,6 +131,8 @@ spec:
             secretKeyRef:
               name: {{ .Release.Name }}-conjur-database-url
               key: key
+        - name: CONJUR_ACCOUNT
+          value: {{ .Values.account }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
