--- a/conjur-oss/templates/tests/test-simple-install-configmap.yaml
+++ b/conjur-oss/templates/tests/test-simple-install-configmap.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   run.sh: |-
     @test "Testing that Conjur status page is up" {
-      curl "http://{{ .Release.Name }}-conjur-oss/" | grep 'Conjur Status'
+      curl -f --cacert /cacert/tls.crt "https://{{ .Release.Name }}-conjur-oss/" | grep 'Conjur Status'
     }
