--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -14,12 +14,19 @@ databaseUrl: ""
 account: "default"
 
 persistentVolumeSize: 8Gi
-# storageClass: ""
+storageClass:
 
 ssl:
   expiration: 365 # days
   hostname: "conjur.myorg.com"
   altNames: []
+
+rbac:
+  create: true
+
+serviceAccount:
+  create: true
+  name:
 
 image:
   repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
