Made the Postgres persistent volume be switchable on/off
Old code did not actually work properly when changing the PV size to 0
and the config values were in various places so we are now ensuring that
they are all tied together.

--- a/conjur-oss/templates/persistent-volume-claim.yaml
+++ b/conjur-oss/templates/persistent-volume-claim.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.persistentVolumeSize }}
+{{ if .Values.postgres.persistentVolume.create }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -18,8 +18,8 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.persistentVolumeSize }}
-  {{ if .Values.storageClass }}
-  storageClassName: {{ .Values.storageClass }}
+      storage: {{ .Values.postgres.persistentVolume.size }}
+  {{ if .Values.postgres.persistentVolume.storageClass }}
+  storageClassName: {{ .Values.postgres.persistentVolume.storageClass }}
   {{ end }}
 {{ end }}
