--- a/conjur-oss/files/nginx.conf
+++ b/conjur-oss/files/nginx.conf
@@ -15,6 +15,19 @@ http {
     client_max_body_size 10M;
     proxy_read_timeout 600s;
 
+    # Prevent DoS attacks
+    reset_timedout_connection on;
+
+    # Speed up SSL connections
+    ssl_session_timeout 10m;
+    ssl_session_cache   shared:SSL:10m;
+
+    # Custom security-minded SSL settings
+    ssl_dhparam /etc/nginx/dhparams.pem;
+    ssl_protocols TLSv1.3 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers 'ALL:!RSA:!SHA:!aNULL:!eNULL:!EXPORT:!MEDIUM:!LOW:!CAMELLIA:!3DES:!DES:!MD5:!PSK:!RC4:!DSS:!SRP:!DSS:!SEED:!SSLv3:!SSLv2:!IDEA:!aGOST';
+
     log_format syslog '$http_host '
                       '$remote_addr '
                       '"$request" $status $body_bytes_sent '
