--- a/conjur-oss/templates/postgres.yaml
+++ b/conjur-oss/templates/postgres.yaml
@@ -42,6 +42,13 @@ spec:
       labels: *AppPostgresLabels
     spec:
       volumes:
+{{ if .Values.seedfile }}
+      - name: {{ .Release.Name }}-conjur-seedfile-pg-volume
+        secret:
+          secretName: {{ .Release.Name }}-conjur-seedfile
+          # Permission == 0400. JSON spec doesn’t support octal notation.
+          defaultMode: 256
+{{- else }}
       - name: {{ .Release.Name }}-conjur-ssl-cert-pg-volume
         secret:
           secretName: {{ .Release.Name }}-conjur-ssl-cert
@@ -52,6 +59,7 @@ spec:
           secretName: {{ .Release.Name }}-conjur-ssl-ca-cert
           # Permission == 0400. JSON spec doesn’t support octal notation.
           defaultMode: 256
+{{- end }}
 {{ if .Values.postgres.persistentVolume.create }}
       - name: postgres-data
         persistentVolumeClaim:
@@ -64,12 +72,18 @@ spec:
         name: postgres
         # TODO: Allow all combos of PV and certs volume mounts
         volumeMounts:
+{{ if .Values.seedfile }}
+        - name: {{ .Release.Name }}-conjur-seedfile-pg-volume
+          mountPath: /opt/conjur/etc/seedfile
+          readOnly: true
+{{- else }}
         - name: {{ .Release.Name }}-conjur-ssl-cert-pg-volume
           mountPath: /opt/conjur/etc/ssl/cert
           readOnly: true
         - name: {{ .Release.Name }}-conjur-ssl-ca-cert-pg-volume
           mountPath: /opt/conjur/etc/ssl/ca
           readOnly: true
+{{- end }}
 {{ if .Values.postgres.persistentVolume.create }}
         - mountPath: "/var/lib/postgresql"
           name: postgres-data
