--- a/conjur-oss/templates/postgres.yaml
+++ b/conjur-oss/templates/postgres.yaml
@@ -42,7 +42,7 @@ spec:
       labels: *AppPostgresLabels
     spec:
       volumes:
-{{ if .Values.seedfile }}
+{{- if .Values.seedfile }}
       - name: {{ .Release.Name }}-conjur-seedfile-pg-volume
         secret:
           secretName: {{ .Release.Name }}-conjur-seedfile
@@ -60,7 +60,7 @@ spec:
           # Permission == 0400. JSON spec doesn’t support octal notation.
           defaultMode: 256
 {{- end }}
-{{ if .Values.postgres.persistentVolume.create }}
+{{- if .Values.postgres.persistentVolume.create }}
       - name: postgres-data
         persistentVolumeClaim:
           claimName: {{ .Release.Name }}-conjur-oss-pvc
@@ -70,11 +70,16 @@ spec:
       - image: "{{ .Values.postgres.image.repository }}:{{ .Values.postgres.image.tag }}"
         imagePullPolicy: {{ .Values.postgres.image.pullPolicy }}
         name: postgres
+{{- if .Values.seedfile }}
+        env:
+        - name: CONJUR_SEED_FILE
+          value: /opt/conjur/seedfile/seed
+{{- end }}
         # TODO: Allow all combos of PV and certs volume mounts
         volumeMounts:
-{{ if .Values.seedfile }}
+{{- if .Values.seedfile }}
         - name: {{ .Release.Name }}-conjur-seedfile-pg-volume
-          mountPath: /opt/conjur/etc/seedfile
+          mountPath: /opt/conjur/seedfile
           readOnly: true
 {{- else }}
         - name: {{ .Release.Name }}-conjur-ssl-cert-pg-volume
@@ -84,7 +89,7 @@ spec:
           mountPath: /opt/conjur/etc/ssl/ca
           readOnly: true
 {{- end }}
-{{ if .Values.postgres.persistentVolume.create }}
+{{- if .Values.postgres.persistentVolume.create }}
         - mountPath: "/var/lib/postgresql"
           name: postgres-data
 {{- end }}
