--- a/e2e/openshift/postgres/Dockerfile
+++ b/e2e/openshift/postgres/Dockerfile
@@ -3,7 +3,8 @@ FROM ubuntu:18.04
 ENV HOME=/var/lib/postgresql \
     PG_USER=postgres \
     PG_VERSION=9.4 \
-    SSL_CERT_DIRECTORY=/opt/conjur/etc/ssl
+    SSL_CERT_DIRECTORY=/opt/conjur/etc/ssl \
+    SEED_FILE_DIRECTORY=/opt/conjur/seedfile
 
 EXPOSE 5432
 
@@ -47,11 +48,13 @@ RUN test "$(id postgres)" = "uid=26(postgres) gid=260(postgres) groups=260(postg
     rm -rf $HOME/$PG_VERSION && \
     mkdir -p /var/run/postgresql \
              $HOME \
+             $SEED_FILE_DIRECTORY \
              $SSL_CERT_DIRECTORY/ca \
              $SSL_CERT_DIRECTORY/follower && \
     /usr/libexec/fix-permissions $HOME && \
     /usr/libexec/fix-permissions /var/run/postgresql && \
     /usr/libexec/fix-permissions /etc/postgresql && \
+    /usr/libexec/fix-permissions $SEED_FILE_DIRECTORY \
     /usr/libexec/fix-permissions $SSL_CERT_DIRECTORY
 
 COPY root /
