--- a/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
+++ b/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
@@ -1,8 +1,8 @@
 # PostgreSQL Client Authentication Configuration File
 # ===================================================
-# TODO: Figure out how to do real auth on the same pod
-host    conjur            all             127.0.0.1/32            trust
-host    conjur            all             ::1/128                 trust
+hostssl replication     all             all                     cert clientcert=1
+hostssl conjur          +auditor        all                     cert clientcert=1
+hostssl conjur          +audit_injector all                     cert clientcert=1
 
 # "local" is for Unix domain socket connections only
-local   conjur            all                                     peer
+local   all             all                                     peer
