--- a/e2e/openshift/nginx/Dockerfile
+++ b/e2e/openshift/nginx/Dockerfile
@@ -1,7 +1,9 @@
 FROM ubuntu:18.04
 
 ENV HOME=/var/www \
-    SSL_CERT_DIRECTORY=/opt/conjur/etc/ssl
+    SSL_CERT_DIRECTORY=/opt/conjur/etc/ssl \
+    SEED_FILE_DIRECTORY=/opt/conjur/seedfile
+
 
 EXPOSE 9000 9443
 
@@ -27,7 +29,8 @@ RUN userdel www-data && \
             --uid 888 www-data
 
 RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y keyutils \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y jq \
+                                                      keyutils \
                                                       libnss-wrapper \
                                                       ntp \
                                                       nginx \
@@ -44,13 +47,16 @@ RUN test "$(id www-data)" = "uid=888(www-data) gid=888(www-data) groups=888(www-
              /var/log/nginx \
              /var/run/nginx \
              $SSL_CERT_DIRECTORY/ca \
-             $SSL_CERT_DIRECTORY/cert && \
+             $SSL_CERT_DIRECTORY/cert \
+             $SEED_FILE_DIRECTORY && \
     /usr/libexec/fix-permissions $HOME && \
     /usr/libexec/fix-permissions /etc/nginx && \
     /usr/libexec/fix-permissions /etc/ssl && \
     /usr/libexec/fix-permissions /var/lib/nginx && \
     /usr/libexec/fix-permissions /var/log/nginx && \
-    /usr/libexec/fix-permissions /var/run/nginx
+    /usr/libexec/fix-permissions /var/run/nginx && \
+    /usr/libexec/fix-permissions $SSL_CERT_DIRECTORY && \
+    /usr/libexec/fix-permissions $SEED_FILE_DIRECTORY
 
 COPY root /
 
