--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -133,6 +133,12 @@ spec:
           timeoutSeconds: 30
           # 1 seconds * 180 = 3 minutes
           failureThreshold: 180
+{{- if .Values.seedfile }}
+        volumeMounts:
+        - name: {{ .Release.Name }}-conjur-seedfile-volume
+          mountPath: /opt/conjur/seedfile
+          readOnly: true
+{{- end }}
         env:
         - name: CONJUR_AUTHENTICATORS
           valueFrom:
@@ -151,6 +157,13 @@ spec:
               key: key
         - name: CONJUR_ACCOUNT
           value: {{ .Values.account }}
+{{- if .Values.seedfile }}
+        - name: CONJUR_SEED_FILE
+          value: /opt/conjur/seedfile/seed
+        - name: CONJUR_DATABASE_HOSTNAME
+          value: {{ .Release.Name }}-postgres
+{{- end }}
+
         resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
