Fix Postgres OpenShift container to allow connections from another pod
Without these changes, we can't connect to the database nor listen to
all interfaces which is a requirement for external connectivity from
Conjur OSS container.

--- a/e2e/openshift/postgres/root/etc/postgresql/postgresql.conf
+++ b/e2e/openshift/postgres/root/etc/postgresql/postgresql.conf
@@ -4,7 +4,7 @@ external_pid_file = '/tmp/9.4-main.pid'
 hba_file = '/etc/postgresql/9.4/main/pg_hba.conf'
 hot_standby = on
 ident_file = '/etc/postgresql/9.4/main/pg_ident.conf'
-listen_addresses = '0.0.0.0'
+listen_addresses = '*'
 log_line_prefix = ''
 max_connections = 100
 max_wal_senders = 16
