--- a/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
+++ b/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
@@ -1,8 +1,7 @@
 # PostgreSQL Client Authentication Configuration File
 # ===================================================
 hostssl replication     all             all                     cert clientcert=1
-hostssl conjur          +auditor        all                     cert clientcert=1
-hostssl conjur          +audit_injector all                     cert clientcert=1
+hostssl conjur          all             all                     cert clientcert=1
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     peer
