Fixed authentication of PG container for OpenShift
We now correctly remap the CN to conjur username and authenticate from
the client. We still need to figure out why conjur isn't picking up the
connection properly though.

--- a/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
+++ b/e2e/openshift/postgres/root/etc/postgresql/pg_hba.conf
@@ -1,7 +1,4 @@
 # PostgreSQL Client Authentication Configuration File
 # ===================================================
-hostssl replication     all             all                     cert clientcert=1
-hostssl conjur          all             all                     cert clientcert=1
-
-# "local" is for Unix domain socket connections only
-local   all             all                                     peer
+hostnossl all             all             all      reject
+hostssl   conjur          +conjur         all      cert map=ssl clientcert=1
