Move conjur http to port 8080 to avoid needing root perms
With this change, we can run conjur-oss container without requiring root
permisisons in the cluster.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -113,12 +113,12 @@ spec:
         args: ["server"]
         ports:
           - name: http
-            containerPort: 80
+            containerPort: 8080
             protocol: TCP
         livenessProbe:
           httpGet:
             path: /
-            port: 80
+            port: http
           initialDelaySeconds: 1
           periodSeconds: 5
           timeoutSeconds: 2
@@ -140,6 +140,8 @@ spec:
           readOnly: true
 {{- end }}
         env:
+        - name: PORT
+          value: "8080"
         - name: CONJUR_AUTHENTICATORS
           valueFrom:
             secretKeyRef:
