--- a/e2e/openshift/syslog-ng/Dockerfile
+++ b/e2e/openshift/syslog-ng/Dockerfile
@@ -2,16 +2,14 @@ FROM ubuntu:18.04
 
 EXPOSE 1999
 
-ENV CONF_DIR=/etc/syslog-ng/conf.d
+ENV CONF_DIR=/etc/syslog-ng/conf.d \
+    SEED_FILE_DIRECTORY=/opt/conjur/seedfile \
+    SSL_CERT_DIRECTORY=/opt/conjur/etc/ssl
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && \
     DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y psmisc \
-                                                      syslog-ng \
-                                                      vim
-
-RUN rm -rf "$CONF_DIR" && \
-    mkdir -p "$CONF_DIR"
+    DEBIAN_FRONTEND=noninteractive apt-get install -y jq \
+                                                      syslog-ng
 
 RUN groupadd --gid 555 \
              --system syslog && \
@@ -23,9 +21,21 @@ RUN groupadd --gid 555 \
             --system \
             --uid 555 syslog
 
+RUN rm -rf "$CONF_DIR" && \
+    mkdir -p "$CONF_DIR" \
+             "$SEED_FILE_DIRECTORY" \
+             "$SSL_CERT_DIRECTORY/ca" \
+             "$SSL_CERT_DIRECTORY/cert"
+
 COPY syslog-ng.conf /etc/syslog-ng/syslog-ng.conf
+COPY fix-permissions \
+     run-syslog-ng \
+     seedfile-extractor /usr/bin/
+
+RUN fix-permissions "$SEED_FILE_DIRECTORY" && \
+    fix-permissions "$SSL_CERT_DIRECTORY"
+
 
 USER 555
 
-ENTRYPOINT [ "/usr/sbin/syslog-ng", "--persist-file", "/tmp/syslog-ng.persist", "-d" ]
-CMD [ "-f", "/etc/syslog-ng/syslog-ng.conf" ]
+CMD [ "run-syslog-ng" ]
