Added follower configuration to Conjur Openshift deployment
This change should allow us to connect to a local socket and start
sending audit data to it. For now, this breaks the deploy but should
work soon.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -164,6 +164,8 @@ spec:
           value: /opt/conjur/seedfile/seed
         - name: CONJUR_DATABASE_HOSTNAME
           value: {{ .Release.Name }}-postgres
+        - name: RAILS_ENV
+          value: follower
 {{- end }}
 
         resources:
