Moved NGINX OpenShift files to base container folder
This will make it easier to work on since all the files will be in the
same folder level.

--- a/e2e/openshift/nginx/Dockerfile
+++ b/e2e/openshift/nginx/Dockerfile
@@ -7,8 +7,6 @@ ENV HOME=/var/www \
 
 EXPOSE 9000 9443
 
-COPY root/usr/libexec/fix-permissions /usr/libexec/fix-permissions
-
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y apt-transport-https \
                                                       ca-certificates \
@@ -38,6 +36,8 @@ RUN apt-get update && \
                                                       vim && \
     apt-get clean
 
+COPY fix-permissions /usr/bin/fix-permissions
+
 RUN test "$(id www-data)" = "uid=888(www-data) gid=888(www-data) groups=888(www-data)" && \
     rm /var/run && \
     rm -rf $HOME \
@@ -49,16 +49,18 @@ RUN test "$(id www-data)" = "uid=888(www-data) gid=888(www-data) groups=888(www-
              $SSL_CERT_DIRECTORY/ca \
              $SSL_CERT_DIRECTORY/cert \
              $SEED_FILE_DIRECTORY && \
-    /usr/libexec/fix-permissions $HOME && \
-    /usr/libexec/fix-permissions /etc/nginx && \
-    /usr/libexec/fix-permissions /etc/ssl && \
-    /usr/libexec/fix-permissions /var/lib/nginx && \
-    /usr/libexec/fix-permissions /var/log/nginx && \
-    /usr/libexec/fix-permissions /var/run/nginx && \
-    /usr/libexec/fix-permissions $SSL_CERT_DIRECTORY && \
-    /usr/libexec/fix-permissions $SEED_FILE_DIRECTORY
+    fix-permissions $HOME && \
+    fix-permissions /etc/nginx && \
+    fix-permissions /etc/ssl && \
+    fix-permissions /var/lib/nginx && \
+    fix-permissions /var/log/nginx && \
+    fix-permissions /var/run/nginx && \
+    fix-permissions $SSL_CERT_DIRECTORY && \
+    fix-permissions $SEED_FILE_DIRECTORY
 
-COPY root /
+COPY exec-entrypoint \
+     run-nginx \
+     seedfile-extractor /usr/bin/
 
 USER 888
 
